# CodeTalk

./: .dockerignore  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  codetalk-cli  demo.html  index.html  manifest.json  pyproject.toml  vibetrace-cli
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
codetalk/: __init__.py  adr_export.py  agent_seed.md  align.py  ask.py  blame.py  brief.py  briefing.py  cache.py  cache_capsules.py  chat.py  cli.py  codex_sessions.py  commands.py  commands_view.py  config.py  console.html  console.py  conversation.py  course.html  course.py  cursor_sessions.py  demo.py  digest.py  doctor.py  drift.py  enrich.py  enrich_plan.py  fts.py  gitlog.py  graph.html  graph.py  highlight.py  hook.py  llm.py  mcp_server.py  mcp_tools.py  obsidian.py  prompts.py  report.py  (+13 more)
docs/: 2026-06-12-interaction-design-vision.md  2026-06-16-product-flow-study.md  2026-06-18-pilot-report.md  2026-06-25-pilot-report.md  README.md  claude-jsonl-schema.md  mcp-install.md  moat-real-records-vs-inference.md  release-readiness-review.md  repowise-vs-vibetrace.md  spec-kit-integration.md  产品介绍与功能链条.md
scripts/: blind_test.py  build_mcpb.py  check_static_no_external.py  citation_audit.py  cleanup_llm_capsules.py  grounding_hitrate.py  grounding_recall.py  narrative_audit.py  release_artifacts.py  release_privacy.py  release_promotion.py  scan_secrets.py  trust_ab_demo.py
spikes/: cursor_session_spike.py  grounding_coverage.py
tests/: test_adr_export.py  test_agent_seed.py  test_ask_answer.py  test_ask_evidence.py  test_ask_json.py  test_ask_parse.py  test_ask_retrieve.py  test_ask_since.py  test_blame.py  test_blind_test.py  test_breadcrumbs.py  test_brief.py  test_briefing.py  test_cache_filter.py  test_cache_fts.py  test_cache_lifecycle.py  test_capsule_dogfood.py  test_chat_highlights.py  test_check_static.py  test_citation_audit.py  test_cli_ask.py  test_cli_ask_since_json.py  test_cli_graph.py  test_cli_init.py  test_cli_mcp.py  test_cli_search.py  test_cli_self.py  test_cli_version.py  test_cli_web.py  test_codex_sessions.py  test_config_guard.py  test_console.py  test_conversation.py  test_course.py  test_cursor_config.py  test_cursor_digest.py  test_cursor_sessions.py  test_debt_drilldown.py  test_demo.py  test_digest_coverage.py  (+75 more)
vibetrace/: adr_export.py  agent_seed.md  ask.py  blame.py  brief.py  briefing.py  cache.py  chat.py  cli.py  codex_sessions.py  commands.py  commands_view.py  config.py  console.html  console.py  conversation.py  course.html  course.py  cursor_sessions.py  debt.py  digest.py  drift.py  enrich.py  filetree.py  fts.py  gitlog.py  graph.html  graph.py  grounding_render.py  hook.py  llm.py  mcp_server.py  mcp_tools.py  obsidian.py  postcard.py  prompts.py  prompts_view.py  report.py  retrieval.py  review.py  (+8 more)
vscode-codetalk/: README.md  (+6 more)
(+86 files in other folders)
