[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codetalk"
version = "0.1.0"
description = "本地优先的代码决策溯源:git 历史 + Claude/Cursor/Codex 会话 → 可核验 why / 理解债 / 决策影响图"
readme = "README.md"
requires-python = ">=3.11"
# M0 红线:核心零三方依赖(deepseek/openai/qwen 经 stdlib urllib);
# 仅 anthropic provider 需 SDK,作可选 extra。
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
# web-app 面(M0 分面修订 2026-06-24):仅 `codetalk web` 需要,不污染核心 stdlib。
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
codetalk = "codetalk.cli:main"

[tool.setuptools]
packages = ["codetalk"]

[tool.setuptools.package-data]
codetalk = ["*.html", "*.md"]
